...
    override func viewDidLoad() {
        super.viewDidLoad()
        
        view.addSubview(tableView)
        
        navigationController?.navigationBar.prefersLargeTitles = true
        title = "Products"
        
        let presenter = ProductListPresenter()
        presenter.viewInput = self
        self.presenter = presenter
        
        tableView.dataSource = self
...
